apps/microservice/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: microservice
  labels:
    app.kubernetes.io/managed-by: platform-one
    otel-injection: enabled
    signature-verification: enabled
    team: platform
